// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render Text with center textAlign 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO hQzXeT"
    data-blade-component="text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with color 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO bAbRyf"
    data-blade-component="text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with default properties 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO eIdQFo"
    data-blade-component="text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO hlGhIo"
    data-blade-component="text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" and contrast "high" 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO yEaxA"
    data-blade-component="text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" and size "small" 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO dXvpmx"
    data-blade-component="text"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "caption" 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO ldPEnv"
    data-blade-component="text"
  >
    Displaying some text
  </p>
</div>
`;
